Geo-Wall-E/Samples/Errors/TypeCheckerDetectingMultipleErrors.gs
//This is a G# program with errors.

a = 2 + b;//Using undeclared variable

print 2 * a + 3;

c = (if (a > 0) then 5 else "raul")  + 13;//If-then-else expression doesnt not return the same on both types.
print c;